# donut-sims

./: .gitignore  README.md  Untitled.ipynb  check_zernikes.ipynb  environment.yml  lsst_setup.sh  nohup.out  nohup_0-99.out  nohup_100-199.out  pyproject.toml  setup.cfg  test_small_sim.py
data/: metadata.npz  zernike_predictions_ml.npz  zernike_predictions_ts_wep.npz
donut_sims/: __init__.py  dofsToZernikes.py  gaiaSourceSelector.py  generateDOF.py  imageSimulator.py  obsScheduler.py  obsSimulator.py  plotUtils.py  simsToButler.py
donut_sims/wfsim/: README.md  __init__.py  atm.py  sim.py  utils.py
notebooks/: donut_demo.ipynb  gaia-donut-simulator.ipynb  ml_vs_tswep_metrics.ipynb  one_intra_and_extra.ipynb  one_intra_and_extra.npz
