[tool.poetry]
name = "donut-sims"
version = "0.1.0"
description = "Donut simulations for the Rubin AOS Wavefront estimation pipeline."
authors = ["John Franklin Crenshaw <jfcrenshaw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
batoid = "^0.3.7"
wfsim = {git = "git@github.com:jmeyers314/wfsim.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
